[gd_scene load_steps=12 format=3 uid="uid://k2r703mpq3t8"]

[ext_resource type="Shader" uid="uid://dha41nql3qnc3" path="res://shaders/PaletteSwap.gdshader" id="1_2xs82"]
[ext_resource type="Script" uid="uid://cjd243463eaxq" path="res://scripts/coin.gd" id="1_us1sg"]
[ext_resource type="Texture2D" uid="uid://ccyiokr1jh0bb" path="res://images/palettes/questionPalette.png" id="2_jxr0w"]
[ext_resource type="Texture2D" uid="uid://0fbvnmfquh2r" path="res://images/coin.png" id="3_us1sg"]
[ext_resource type="Script" uid="uid://bw6egy1mx12d7" path="res://scripts/questionblock.gd" id="4_jxr0w"]
[ext_resource type="Texture2D" uid="uid://bvuy04d5u8j6t" path="res://images/questionSolid.png" id="4_x7wel"]
[ext_resource type="Texture2D" uid="uid://bcy24rsbujt03" path="res://images/watercoin.png" id="6_a5v4w"]
[ext_resource type="AudioStream" uid="uid://qwtgq3se0dvo" path="res://audio/coin.mp3" id="8_wdyyb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a5v4w"]
size = Vector2(16, 16)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wdyyb"]
shader = ExtResource("1_2xs82")
shader_parameter/palette = ExtResource("2_jxr0w")
shader_parameter/accessRow = 1

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x7wel"]
shader = ExtResource("1_2xs82")
shader_parameter/palette = ExtResource("2_jxr0w")
shader_parameter/accessRow = 1

[node name="Area2D" type="Area2D"]
collision_layer = 4294967295
collision_mask = 4294967295
script = ExtResource("1_us1sg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_a5v4w")

[node name="QuestionSolid" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
material = SubResource("ShaderMaterial_wdyyb")
texture = ExtResource("4_x7wel")
script = ExtResource("4_jxr0w")

[node name="Coin" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_x7wel")
texture = ExtResource("3_us1sg")
script = ExtResource("4_jxr0w")

[node name="WaterCoin" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
material = SubResource("ShaderMaterial_x7wel")
texture = ExtResource("6_a5v4w")
script = ExtResource("4_jxr0w")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="CoinSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_wdyyb")
attenuation = 1e-05
panning_strength = 0.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
